Fixed style for collapse side colums

--- a/scss/upo/post.scss
+++ b/scss/upo/post.scss
@@ -139,7 +139,8 @@ nav.navbar .logo img {
 
 #columnschooser {
     position: relative;
-    text-align: right;
+    /*text-align: right;*/
+    float: right;
 }
 
 .que.calculated .answer input[type="text"] {
